loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var c : Boolean  
    ^Poucet1:2: error: local variables must be initialized
var c : Boolean  
    ^Poucet1:31: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
c=getGroundColor()
                ^Poucet1:32: error: not found: value orange
if (c != orange){
         ^